# Zk-probe

./: .gitignore  README.md  alerts.jsonl  package.sh
distributed/agent/: install.sh  zknids_agent.py
distributed/aggregator/: build-verifier-package.sh  install.sh  server.py
distributed/aggregator/dashboard/: index.html
phase1/: Makefile
phase1/ebpf/tracepoints/: execve_counter.bpf.c
phase1/ebpf/xdp/: xdp_counter.bpf.c
phase1/include/: vmlinux.h
phase1/userspace/collector/: phase1_loader  phase1_loader.c
phase2/: requirements.txt  setup.py
phase2/config/: invariants.yaml
phase2/tests/: demo.py
phase2/tests/fixtures/: attack_snapshots.txt  malformed_snapshots.txt  sample_snapshots.txt
phase2/zkNIDS_phase2/: __main__.py  alert_generator.py  invariant_engine.py  parser.py  state_manager.py
phase2/zkNIDS_phase2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phase3/: Cargo.toml  test_e3e.py
phase3/benches/: circuit_bench.rs
phase3/src/: lib.rs
phase3/src/api_client/: client.rs
phase3/src/circuits/: deviation_check.rs  mod.rs  rate_check.rs  ratio_check.rs
phase3/src/prover/: mod.rs  parallel.rs  prove.rs  setup.rs
phase3/src/verifier/: mod.rs  verify.rs
phase3/src/witness/: extractor.rs  mod.rs  types.rs
shared/docs/: HASH_SPEC.md
test_results/: alerts_20260125_031432.jsonl  alerts_extended_20260125_034328.jsonl  alerts_network_20260125_041350.jsonl
