[package]
name = "zknids-phase3"
version = "0.1.0"
edition = "2021"
authors = ["zkNIDS Phase 3 Developer"]
description = "Zero-Knowledge Verification Layer for zkNIDS — PLONK+IPA proofs (trustless, no ceremony)"
license = "MIT"

[dependencies]
# ── halo2 (PSE fork on crates.io, PLONK + IPA, NO trusted setup) ──
halo2_proofs = "0.3"
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"

# ── Serialization ────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── HTTP client for aggregator API ───────────────────────
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }

# ── Utilities ────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
base64 = "0.21"
rand = "0.8"
rayon = "1.8"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "phase3-setup"
path = "src/bin/setup.rs"

[[bin]]
name = "phase3-prover"
path = "src/bin/prover.rs"

[[bin]]
name = "phase3-verify"
path = "src/bin/verify.rs"

[[bench]]
name = "circuit_bench"
harness = false

[profile.release]
opt-level = 3
lto = true